(Quick fix) Removes white spaces from mobiles

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -10,12 +10,13 @@ body {
     width: 100vw;
     height: 100vh;
     color: getColor(-1);
-    overflow: hidden;
 
     #__next {
         width: 100%;
         height: 100%;
+        position: relative;
         display: flex;
         flex-flow: column;
+        overflow: hidden;
     }
 }
